Update linting to fit personal preferences

--- a/package.json
+++ b/package.json
@@ -102,14 +102,15 @@
       "\\.(css|less|sass|scss)$": "identity-obj-proxy"
     },
     "moduleFileExtensions": [
-      "js"
+      "js",
+      "jsx"
     ],
     "moduleDirectories": [
       "node_modules",
       "app/node_modules"
     ],
     "transform": {
-      "^.+\\.js$": "babel-jest"
+      "^.+\\.jsx?$": "babel-jest"
     }
   },
   "devDependencies": {
