--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
   },
   "dependencies": {
     "electron-debug": "^1.1.0",
+    "electron-store": "^1.3.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "material-ui": "^0.19.1",
