--- a/package.json
+++ b/package.json
@@ -179,7 +179,8 @@
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "material-ui": "^0.19.1",
-    "moment": "^2.18.1",
+    "moment": "^2.9.0",
+    "moment-timezone": "^0.5.14",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "3.0.0-beta.6",
