--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,18 +2,17 @@ os: unstable
 
 environment:
   matrix:
-    - nodejs_version: 7
-    - nodejs_version: 6
+    - nodejs_version: 9
 
-cache:
-  - node_modules -> package.json
-  - app/node_modules -> app/package.json
+# cache:
+#   - node_modules -> package.json
+#   - app/node_modules -> app/package.json
 
 # Enable when https://github.com/yarnpkg/yarn/issues/1233 and
 # https://github.com/yarnpkg/yarn/issues/1059 are resolved and disable npm cache
 #
-# cache:
-#   - "%LOCALAPPDATA%/Yarn"
+cache:
+  - "%LOCALAPPDATA%/Yarn"
 
 matrix:
   fast_finish: true
@@ -26,22 +25,22 @@ shallow_clone: true
 
 clone_depth: 1
 
-install:
-  - ps: Install-Product node $env:nodejs_version
-  - set CI=true
-  - npm install -g npm@latest
-  - set PATH=%APPDATA%\npm;%PATH%
-  - npm install
+# install:
+#   - ps: Install-Product node $env:nodejs_version
+#   - set CI=true
+#   - npm install -g npm@latest
+#   - set PATH=%APPDATA%\npm;%PATH%
+#   - npm install
 
 # Enable when https://github.com/yarnpkg/yarn/issues/1233 and
 # https://github.com/yarnpkg/yarn/issues/1059 are resolved and disable npm cache
 #
-# install:
-#   - ps: Install-Product node $env:nodejs_version
-#   - set CI=true
-#   - choco install yarn
-#   - refreshenv
-#   - yarn
+install:
+  - ps: Install-Product node $env:nodejs_version
+  - set CI=true
+  - choco install yarn
+  - refreshenv
+  - yarn
 
 test_script:
   - node --version
