--- a/package.json
+++ b/package.json
@@ -192,6 +192,9 @@
     "redux-thunk": "^2.2.0",
     "source-map-support": "^0.4.15"
   },
+  "optionalDependencies": {
+    "7zip-bin-linux": "~1.3.1"
+  },
   "devEngines": {
     "node": ">=9.5",
     "npm": ">=5.6",
