--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "babel-register": "^6.26.0",
     "chalk": "^2.3.0",
     "concurrently": "^3.5.1",
+    "copy-webpack-plugin": "^4.4.1",
     "cross-env": "^5.1.3",
     "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.9",
