--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
     "devtron": "^1.4.0",
     "electron-debug": "^1.5.0",
     "electron-store": "^1.3.0",
